<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>de.cuioss</groupId>
        <artifactId>cui-java-parent</artifactId>
        <version>0.3.1</version>
        <relativePath />
    </parent>

    <artifactId>cui-java-tools</artifactId>
    <name>cui java tools</name>
    <version>2.0-SNAPSHOT</version>
    <description>Utility Library acting as a replacement for googles guava,
        certain apache-commons libraries and logging
        facades/frameworks.
    </description>
    <packaging>jar</packaging>

    <url>https://github.com/cuioss/cui-java-tools/</url>
    <scm>
        <url>https://github.com/cuioss/cui-java-tools/</url>
        <connection>scm:git:https://github.com/cuioss/cui-java-tools.git</connection>
        <developerConnection>scm:git:https://github.com/cuioss/cui-java-tools/</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <properties>
        <maven.jar.plugin.automatic.module.name>de.cuioss.java.tools</maven.jar.plugin.automatic.module.name>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven-javadoc-plugin.source>17</maven-javadoc-plugin.source>
    </properties>
    <issueManagement>
        <url>https://github.com/cuioss/cui-java-tools/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <dependencyManagement>
        <dependencies>
            <!-- owolff: Kept locally, because solely used for module testing -->
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcpkix-jdk18on</artifactId>
                <version>1.76</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>2.1.1</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
        <!-- Unit testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>